examples/reference/linker_regions_phase6_emit_overflow.err
Assembly failed:
4: ERROR [asm202]
    4 |     .emit byte, 256
                ^
ERROR: Value $100 (256) does not fit in 1-byte unit (max $FF)
